--- a/Config.properties
+++ b/Config.properties
@@ -1,16 +1,16 @@
-#java.util.Hashtable$Enumerator@437536
-#Mon May 11 17:41:01 BRT 2015
+#java.util.Hashtable$Enumerator@131582b
+#Wed May 13 17:41:30 BRT 2015
 main_host=localhost
 QUERY_EXPORT_HISTORY=C\:\\Users\\will.MRDIGITAL2\\Desktop\\teste.sql
-main_user=publi
+main_user=root
 QUERY_EXPORT_FILE=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.html
 H_DIVIDER_LOC=250
 main_database_type=0
 backup_file=C\:\\Backups\\panda\\probkp.sql
-restore_file=C\:\\backups\\mssql.sql
 V_DIVIDER_LOC=132
+restore_file=C\:\\backups\\mssql.sql
 main_database=
 last_log_file=C\:\\PUBLIW\\ODBC1306201217.LOG
-main_pass=publi
 backup_option=1
+main_pass=publi
 save_log_file=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.sql
