--- a/jar/Config.properties
+++ b/jar/Config.properties
@@ -1,8 +1,8 @@
-#java.util.Hashtable$Enumerator@152f27b
-#Mon May 11 17:44:35 BRT 2015
-main_host=localhost
+#java.util.Hashtable$Enumerator@272ac1
+#Wed May 13 16:31:09 BRT 2015
+main_host=192.168.88.3
 main_autoexec_program=
-main_user=root
+main_user=publi
 QUERY_EXPORT_FILE=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.html
 H_DIVIDER_LOC=250
 main_database_type=0
@@ -10,7 +10,7 @@ backup_file=C\:\\Backups\\marta_dados.sql
 V_DIVIDER_LOC=182
 restore_file=C\:\\Backups\\i2_PITs_e_PAUTAS.sql
 main_info_initcolapse=false
-main_database=
+main_database=arcospe
 backup_page_size=1000
 main_pass=publi
 backup_option=0
