initial implementation of Logs

--- a/Config.properties
+++ b/Config.properties
@@ -1,16 +1,16 @@
-#java.util.Hashtable$Enumerator@131582b
-#Wed May 13 17:41:30 BRT 2015
-main_host=localhost
+#java.util.Hashtable$Enumerator@d84e6e
+#Thu Jun 04 16:53:36 BRT 2015
+main_host=192.168.88.3
 QUERY_EXPORT_HISTORY=C\:\\Users\\will.MRDIGITAL2\\Desktop\\teste.sql
-main_user=root
+main_user=publi
 QUERY_EXPORT_FILE=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.html
-H_DIVIDER_LOC=250
-main_database_type=0
-backup_file=C\:\\Backups\\panda\\probkp.sql
-V_DIVIDER_LOC=132
-restore_file=C\:\\backups\\mssql.sql
+H_DIVIDER_LOC=269
+main_database_type=3
+backup_file=C\:\\Backups\\PANDABKP.sql
+V_DIVIDER_LOC=182
+restore_file=C\:\\backups\\estoq.sql
 main_database=
 last_log_file=C\:\\PUBLIW\\ODBC1306201217.LOG
 backup_option=1
 main_pass=publi
-save_log_file=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.sql
+save_log_file=C\:\\Users\\Will.MRDIGITAL2\\Desktop\\teste.SQL
